--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "weather-react",
   "private": true,
+  "homepage": "https://romka008.github.io/Weatheronreact/",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
@@ -14,6 +17,7 @@
     "@mui/material": "^5.5.2",
     "@redux-devtools/extension": "^3.2.2",
     "axios": "^0.26.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
